Lượng sửa lần 2

--- a/index.html
+++ b/index.html
@@ -913,11 +913,11 @@ Khi bước vào "Hương Vị Quê Nhà", khách hàng sẽ được chào đó
 
             <div class="profile">
               <img
-                src="/grilli-master/assets/images/thanks.jpg"
+                src="/assets/images/thanks.jpg"
                 width="200"
                 height="200"
                 loading="lazy"
-                alt="Sam Jhonson"
+                alt="HARD-WORKING"
                 class="img"
               />
 
