--- a/index.html
+++ b/index.html
@@ -603,9 +603,9 @@ Khi bước vào "Hương Vị Quê Nhà", khách hàng sẽ được chào đó
               </p>
 
               <div class="wrapper">
-                <del class="del body-3">$40.00</del>
+                <del class="del body-3"><s>400.000đ</s></del>
 
-                <span class="span body-1">$20.00</span>
+                <span class="span body-1">200.000đ</span>
               </div>
 
               <a href="#" class="btn btn-primary">
@@ -676,7 +676,7 @@ Khi bước vào "Hương Vị Quê Nhà", khách hàng sẽ được chào đó
 
 
 
-                      <span class="span title-2">50.000đ</span>
+                      <span class="span title-2">150.000đ</span>
                     </div>
 
                     <p class="card-text label-1">
@@ -710,7 +710,7 @@ Khi bước vào "Hương Vị Quê Nhà", khách hàng sẽ được chào đó
                         <a href="#" class="card-title">PHỞ</a>
                       </h3>
 
-                      <span class="span title-2">70.000đ</span>
+                      <span class="span title-2">150.000đ</span>
                     </div>
 
                     <p class="card-text label-1">
@@ -780,7 +780,7 @@ Khi bước vào "Hương Vị Quê Nhà", khách hàng sẽ được chào đó
 
                       <span class="badge label-1">New</span>
 
-                      <span class="span title-2">60.000đ</span>
+                      <span class="span title-2">100.000đ</span>
                     </div>
 
                     <p class="card-text label-1">
