Lượng sửa lần 4

--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@ Khi bước vào "Hương Vị Quê Nhà", khách hàng sẽ được chào đó
                 <span class="span body-1">200.000đ</span>
               </div>
 
-              <a href="#" class="btn btn-primary">
+              <a href="#menu" class="btn btn-primary">
                 <span class="text text-1">Xem thực đơn</span>
 
                 <span class="text text-2" aria-hidden="true"
@@ -640,7 +640,7 @@ Khi bước vào "Hương Vị Quê Nhà", khách hàng sẽ được chào đó
         <!-- 
         - #MENU
       -->
-
+        
         <section class="section menu" aria-label="menu-label" id="menu">
           <div class="container">
             <p class="section-subtitle text-center label-2">
